--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:setup": "node db/create/create.knex.js",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -13,7 +13,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "knex": "^2.3.0",
+    "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
+    "pug": "^3.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
