--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "primer-entrega",
+  "name": "mocks",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +13,12 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
+    "socket.io": "^4.5.3",
     "uuid": "^9.0.0"
   }
 }
