--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "@faker-js/faker": "^7.6.0",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2",
-    "socket.io": "^4.5.3",
     "uuid": "^9.0.0"
   }
 }
