--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "forever": "^4.0.3",
     "fork": "^1.3.1",
     "jsonwebtoken": "^9.0.0",
+    "minimist": "^1.2.7",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "pm2": "^5.2.2",
     "uuid": "^9.0.0"
   }
 }
