--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "forever": "^4.0.3",
-    "fork": "^1.3.1",
-    "jsonwebtoken": "^9.0.0",
-    "minimist": "^1.2.7",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "pm2": "^5.2.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
   }
 }
