--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "testApi": "mocha ./src/test/api.test.js",
+    "testProducts": "mocha ./src/test/testProductsMondoDB.test.js"
   },
   "keywords": [],
   "author": "",
@@ -14,16 +16,19 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.7",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mocha": "^10.2.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "supertest": "^6.3.3",
     "twilio": "^4.8.0",
     "uuid": "^9.0.0"
   }
